# graphics

./: .gitignore  .gitmodules  CMakeLists.txt
include/: CameraClass.h  ElementBufferObject.h  TextureObjectClass.h  VertexAttributeObject.h  VertexBufferClass.h  shaderClass.h
own_render_engine/: CMakeLists.txt
own_render_engine/include/: ElementBufferObject.h  VertexAttributeObject.h  VertexBufferClass.h  shaderClass.h
own_render_engine/src/: camera.cpp
src/: ebo.cpp  main.cpp  shader.cpp  textureClass.cpp  vao.cpp  vbo.cpp
src/shaders/: basic.frag  basic.vert
